--- a/index.html
+++ b/index.html
@@ -11,15 +11,98 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="index.css" />
     <meta name="description" content="Portfolio of Cagdas Agirtas" />
   </head>
   <body>
     <div class="container text-center">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <h1>Hi, I'm Çağdaş Ağırtaş</h1>
-          <h2>(Cagdas Agirtas</h2>
-          <h3>Cha-uh-dash)</h2>
+          <img src="./document/cagdasagirtas.jpg" width="50%" height="auto" />
+          <h1>Hi, 👋 I'm Çağdaş Ağırtaş</h1>
+          <h2>Cagdas Agirtas</h2>
+          <h3>/Cha-uh-dash/</h3>
+          <q
+            >A multidisciplinary Product Manager and,<br />
+            hobbyist developer.</q
+          >
+        </div>
+        <hr />
+        <div class="row">
+          <div class="col-6" id="left-side">
+            <img src="./icon/pdf.svg" height="48" width="48" />
+          </div>
+          <div class="col-6" id="right-side">
+            <a
+              href="https://docs.google.com/document/d/e/2PACX-1vSPaU4Rvd4wt7JKPcbrSOK803vp591tw2tjvYRsncwiIdTnpzD9JezcuR9N8g4w_9d9DrV9ghmXWScO/pub"
+              target="_blank"
+              >Resume</a
+            >
+          </div>
+          <div class="col-6" id="left-side">
+            <img src="./icon/linkedin.svg" height="48" width="48" />
+          </div>
+          <div class="col-6" id="right-side">
+            <a href="https://www.linkedin.com/in/cagirtas/" target="_blank"
+              >LinkedIn Profile</a
+            >
+          </div>
+          <div class="col-6" id="left-side">
+            <img src="./icon/pin.svg" height="48" width="48" />
+          </div>
+          <div class="col-6" id="right-side">
+            <a
+              href="https://cagirtas.medium.com/how-i-built-my-own-productivity-app-e59bcc808b4"
+              target="_blank"
+              >How I built my own productivity app</a
+            >
+          </div>
+          <div class="col-6" id="left-side">
+            <img src="./icon/spotify.svg" height="48" width="48" />
+          </div>
+          <div class="col-6" id="right-side">
+            <a
+              href="https://open.spotify.com/show/58BIMQsvAOww5181bbQaw6?si=426bb7eb1a074bb6"
+              target="_blank"
+              >Ürünlerin Ardında Podcast</a
+            >
+          </div>
+          <div class="col-6" id="left-side">
+            <img src="./icon/medium.svg" height="48" width="48" />
+          </div>
+          <div class="col-6" id="right-side">
+            <a href="https://cagirtas.medium.com/" target="_blank"
+              >Medium Stories</a
+            >
+          </div>
+          <div class="col-6" id="left-side">
+            <img src="./icon/github.svg" height="48" width="48" />
+          </div>
+          <div class="col-6" id="right-side">
+            <a href="https://github.com/crfgx?tab=repositories" target="_blank"
+              >Github Repos</a
+            >
+          </div>
+          <div class="col-6" id="left-side">
+            <img src="./icon/youtube.svg" height="48" width="48" />
+          </div>
+          <div class="col-6" id="right-side">
+            <a
+              href="https://www.youtube.com/channel/UC_1-sHFlnbCAvcXMYYnt1Kg"
+              target="_blank"
+              >Motorcycle Diaries</a
+            >
+          </div>
+          <div class="col-6" id="left-side">
+            <img src="./icon/goodreads.svg" height="48" width="48" />
+          </div>
+          <div class="col-6" id="right-side">
+            <a
+              href="https://www.goodreads.com/user/show/7277463-cagdas-agirtas"
+              target="_blank"
+              >Goodreads</a
+            >
+          </div>
         </div>
       </div>
     </div>
