--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
           <div class="col-6" id="right-side">
             <a
-              href="https://docs.google.com/document/d/e/2PACX-1vSPaU4Rvd4wt7JKPcbrSOK803vp591tw2tjvYRsncwiIdTnpzD9JezcuR9N8g4w_9d9DrV9ghmXWScO/pub"
+              href="https://docs.google.com/document/d/1oNjlKctSzD9wTjBCW82VLPOx8RrHnvjpkN35gveUYwM/edit?usp=sharing"
               target="_blank"
               >Resume</a
             >
