--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     <div class="container text-center">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <img src="./document/cagdasagirtas.jpg" width="50%" height="auto" />
-          <h1>Hi, 👋 I'm Çağdaş Ağırtaş</h1>
+          <img
+            class="p-2"
+            src="./document/cagdasagirtas.jpg"
+            width="50%"
+            height="auto"
+          />
+          <h1 class="pt-4">Hi, 👋 I'm Çağdaş Ağırtaş</h1>
           <h2>Cagdas Agirtas</h2>
           <h3>/Cha-uh-dash/</h3>
           <q
@@ -27,8 +32,10 @@
             hobbyist developer.</q
           >
         </div>
-        <hr />
-        <div class="row">
+        <div class="p-2">
+          <hr />
+        </div>
+        <div class="row mb-5">
           <div class="col-6" id="left-side">
             <img src="./icon/pdf.svg" height="48" width="48" />
           </div>
