github address fix

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <img src="./icon/github.svg" height="48" width="48" />
           </div>
           <div class="col-6" id="right-side">
-            <a href="https://github.com/crfgx?tab=repositories" target="_blank"
+            <a href="https://github.com/crfgxr?tab=repositories" target="_blank"
               >Github Repos</a
             >
           </div>
