--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h3>/Cha-uh-dash/</h3>
           <q
             >A multidisciplinary Product Manager and,<br />
-            hobbyist developer.</q
+            indie developer.</q
           >
         </div>
         <div class="p-2">
